--- a/Main/styles.css
+++ b/Main/styles.css
@@ -178,3 +178,14 @@ border-color:#435AE0 !important ;
   .table-hover tbody :hover > th {
     background-color: #F2F4FF !important;
   }
+
+  input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
